# OpenCV

./: README.md
basics/: CMakeLists.txt
basics/src/: canny.cpp  changeConBri.cpp  crop.cpp  read_image.cpp  read_video.cpp  structs.cpp  threshold.cpp
features/: CMakeLists.txt
features/src/: stitch.cpp
projects/: CMakeLists.txt
projects/src/: Readme.md  bookFinder.cpp  colorDetection.cpp  objInfo.cpp  shapeClassifier.cpp  vignette.cpp
test/: CMakeLists.txt
test/src/: phone_webcam.cpp
